# epub-convert-to-vertical

./: .gitignore  LICENSE  README.md  pyproject.toml
epub_vertical/: __init__.py  __main__.py  converter.py
